Desenvolvimento da controller e da view da entidade de Usuario

--- a/TarefaSiteEF/appsettings.json
+++ b/TarefaSiteEF/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TarefaContext": "Server=(localdb)\\mssqllocaldb;Database=TarefaContext-5df655c0-ab16-4315-8b52-470f506e5fb7;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "TarefaSiteEFContext": "Server=(localdb)\\mssqllocaldb;Database=TarefaSiteEFContext-3e3503af-09e0-44ff-aa80-9b25a7c8fa33;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
