Desenvolvimento das Views, da Controller e Repositorio de Usuario

--- a/TarefaSiteEF/TarefaSiteEF.csproj
+++ b/TarefaSiteEF/TarefaSiteEF.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Tarefas.Infra\Tarefas.Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Imagens\" />
+  </ItemGroup>
+
 </Project>
