--- a/TarefaSiteEF/appsettings.json
+++ b/TarefaSiteEF/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TarefaContext": "Server=(localdb)\\mssqllocaldb;Database=TarefaContext-5df655c0-ab16-4315-8b52-470f506e5fb7;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "TarefaSiteEFContext": "Server=(localdb)\\mssqllocaldb;Database=TarefaSiteEFContext-3e3503af-09e0-44ff-aa80-9b25a7c8fa33;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+    "TarefaSiteEFContext": "Server=DESKTOP-HABILF2\\SQLEXPRESS;Database=TarefaSiteEF-3e3503af-09e0-44ff-aa80-9b25a7c8fa33;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
